k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xpad-bko
  namespace: gigxpad-dev
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: xpad-bko
  template:
    metadata:
      labels:
        app: xpad-bko
    spec:
      containers:
        - image: xpad-bko
          name: xpad-bko
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 200m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 2Gi
          imagePullPolicy: Always
      imagePullSecrets:
        - name: gigxpad-bko-dev-secret
